# Adaptive-speculative-decoding

./: .baseline_tokens.json  .claude  .dockerignore  .editorconfig  .gitattributes  .gitignore  .mypy.ini  .pre-commit-config.yaml  .venv  AGENTS.md  CHANGELOG.md  CODE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  all_code.txt  con.py  docker-compose.yml  fix_plan_sub_optimal.md  index.html  pyproject.toml  pytest.ini  ruff.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md  research.md
.github/workflows/: ci.yml  docker.yml
.pi/quiet-tools/: index.jsonl
.pi/quiet-tools/outputs/: 2026-06-18T23-25-38-912Z-read-lcpfHslnMDgRBc3CIyswqypFf4JmumjZ-2ff9a3cb8b.txt  2026-06-18T23-25-54-270Z-read-DxczugrfqHFfp5KVFnhZadMwOBcXw0FD-759ab06c37.txt  2026-06-18T23-25-54-271Z-read-bIkxDlCecNQVHkskBueFSSHzn5sdyeW2-0686a2bfcc.txt  2026-06-18T23-26-41-299Z-read-kIH4eVKd6RdLoDKrrtbpmE17R1haSG6J-6f465e7c84.txt  2026-06-18T23-45-28-431Z-bash-0DBCFNIoQuDtQAYt6b3eXDeBeF9gw0Vn-3661f6d548.txt  2026-06-19T00-19-55-022Z-bash-LxNfhHJJLROdkYrXzjQtPRh3xfqRwgVa-a96591c087.txt  2026-06-19T00-25-02-994Z-bash-cjKXPIrw4V8Up1sjDNHc2A5XOHatavuC-afe9e9b067.txt  2026-06-19T01-15-16-628Z-read-hQ3bPlbdNEidelJk1QB970VEVeI0Gc91-a65c73d201.txt  2026-06-19T01-15-16-679Z-read-1dmN1c96kQnTQghEX7YmvaIhEzfiKtog-9b6a7983d9.txt  2026-06-19T01-15-21-636Z-read-Ey7kTmMfwiqyTMLpsatgMrhQUIABvIhj-7f52401818.txt  2026-06-19T06-08-23-232Z-read-dFcWlZ6zM84SlKPm6SV0faNc7COXfJZm-e4e488098e.txt  2026-06-19T06-08-37-619Z-read-kAfi2BNBCo90PSbNZJuOVjsTEwVO2FXT-4c458dcafd.txt  2026-06-19T06-08-37-632Z-read-fsZfwum95UvwBWU9g6Hcqicpyw1HS3MN-8cb038d880.txt  2026-06-19T06-08-41-058Z-read-pczgsETrKB85AXwxJautcbMiWvqsLGXR-2a26a366c7.txt  2026-06-19T06-08-44-794Z-read-lEdunSSknqgiFeGOpV8r41w08gexhwcD-0318ad76bd.txt  2026-06-19T07-07-12-675Z-read-0JWee7MOrsAyBmT19RTkiEIyHYB9nuZS-eb47d30a44.txt  2026-06-19T07-07-31-461Z-read-w3ENJuhsSzPHW5f2Bsf9yKZ1v8YodpPl-e9a490b454.txt  2026-06-19T07-07-48-630Z-read-fZWssLDCRaOLua9KvwrV3r6spoGWha7M-9e8a2eece0.txt  2026-06-19T07-07-48-630Z-read-tCfGFdDLtObSlOtuSmeXGuVT829YGX1I-02563f6b62.txt  2026-06-19T07-08-20-135Z-read-8clqBS0KMdJCHcgYklMsrVyz1GwEtI7c-01408807ec.txt  2026-06-19T07-08-38-729Z-read-Bkqn19F58Z7Shs6D5GQilaiCTFh0AvXA-8d4f58f4d3.txt  2026-06-19T07-08-38-729Z-read-ME96NoBpDiwobqpYuq9ewJgen3TEHWYg-4fde0d37c5.txt  2026-06-20T16-17-04-954Z-bash-aVG47QAE3aD2wM3u3sYzGiOl0vZBcGiG-8e57a7523c.txt  2026-06-20T16-17-04-954Z-bash-gkvTg7eBfYyLZWeiUxMCLrNG63Y7fgPn-6364b86868.txt  2026-06-20T16-17-04-955Z-bash-Ja1obpzR7BuvnP1TckNdnJBO2MmaAcMI-b837f02f8a.txt  2026-06-20T16-17-04-955Z-bash-mLpDRQYHnF58Xwgyw64mavmYY1MlQU4S-08886de79d.txt  2026-06-21T12-27-43-914Z-bash-87jLNxaUnrkCxYHhdBLdVhg1QI1p2Jtx-fee87a9128.txt  2026-06-21T12-30-23-961Z-read-wvH1qUYyElaFAFhQAHgIsP40hoTsJtuR-31002a26cf.txt  2026-06-21T12-44-15-666Z-bash-szN55cunsAfWOkVCXf5IlXarauhzAane-bbc5381b97.txt  2026-06-21T12-47-45-545Z-read-aym0VUfgAOcvXEw4j5o4Taqev4oLMiBN-de2a6dfb9e.txt  2026-06-21T12-49-33-773Z-read-YQQbkNeyiAqKUwsBtPIycWufYNCRHK11-33313137ea.txt  2026-06-21T13-30-32-323Z-read-EnV87SFILv229FF2Ne6PUvlJDEqIqwU4-57aedd9403.txt  2026-06-21T13-30-32-323Z-read-wmyz2mJsbqM6pabZKZDvO1POoDm6ZB4J-26ceb6bb0d.txt  2026-06-21T13-30-47-894Z-read-Ejn0tFd334lYTOl7JJPHeZsZAVRw71fV-4efdccdef4.txt  2026-06-21T13-30-47-894Z-read-F4U07mz9Anzwo8IVS3DRUOh9A90Rktdl-df0ef7ce2a.txt  2026-06-21T13-30-57-630Z-read-2Mfc8x5zUZXbDUtAWs90wpzxl2Tw6XXY-1938a053e3.txt  2026-06-21T13-57-05-500Z-read-a6OseEpZU1RpV6FvXWVxvJ1zs99j5uCR-7f64135efd.txt  2026-06-21T13-57-16-700Z-read-78L8MEwYW9fJeykYH7tdtSusI6C76ufw-ddce37faad.txt  2026-06-21T13-58-44-123Z-read-owoLnQ2jynJl33WJ54fLgnZoZoiyUuDP-47c451326c.txt  2026-06-21T14-14-57-226Z-read-Fhrc1RO3DMtAapZW49QQF8eF9dvBmIuY-80ea95742b.txt  (+118 more)
docs/: architecture.md  optimization-plan.md  optimization-results.md
docs/modules/cache/: ngram.md
docs/modules/core/: speculative.md
docs/modules/distillation/: online.md
docs/modules/extensions/: README.md
docs/modules/translation/: cross_vocab.md
docs/plans/: experiment-refactor-option-b.md  experiment-refactor-progress.md  logging_redesign.md
docs/research/: glossary.md  roadmap.md
reports/: memory_tps_analysis.md
research/: README.md
research/a.polevoi/: README.md
research/al.khadeeva/: README.md
research/da.popov/: README.md
research/e.pestrovskii/: 001__collect_dataset.ipynb  README.md
research/fix_oom_baseline/: plan.md
research/m.krylov/: HANDOFF.md  README.md
research/m.krylov/experiments/: __init__.py  bandit_routing.py
research/v.poponnikov/: README.md
research/v.poponnikov/experiments/: stochastic_dynamic_k.py
research/v.poponnikov/notebooks/: dynamic_k_comparison.ipynb  dynamic_k_comparison.py
results_profile/: profile_01_baseline.json  profile_04_+online_distil.json  profile_06_+replay_prio.json  profile_11_full_system.json  profiling_report.txt
scripts/: cleanup.sh  init_env.sh  profile_experiments.py  profiler.py
src/: main.py  profiler.py
src/benchmarks/metrics/: collector.py
src/config/: default.yaml
src/config/experiments/: lora_distil.yaml
src/core/cache/: ngram.py
src/core/decoder/: speculative.py
src/core/distillation/: online.py
src/core/models/: __init__.py  draft_model.py  drafter.py  target_model.py
src/core/profiling/: __init__.py  substep_timer.py  torch_profiler.py
src/core/translation/: rules.py  vocabulary.py
src/experiments/: __init__.py  base.py  runner.py  suites.py
src/experiments/built_in/: __init__.py  baseline.py  full_system.py  with_acceptance_adapt.py  with_contrastive.py  with_lattice.py  with_online_distil.py  with_replay.py  with_routing.py  with_speedup_adapt.py  with_translator.py  with_universal.py
tests/: bench_rule2.py  smoke_distill.py  smoke_lora.py  test_differential.py  test_fixes.py
tests/extension_tests/: __init__.py
tests/fixtures/: __init__.py
tests/unit/: test_critical_fixes.py  test_experiment_base.py  test_experiment_suites.py  test_sub_optimal_fixes.py  test_v_poponnikov_dynamic_k.py
(+12 files in other folders)
