[project]
name = "adaptive-speculative-decoding"
version = "0.1.0"
description = "Adaptive Speculative Decoding — a research framework for optimizing speculative decoding with adaptive draft length, cross-vocabulary translation, and online distillation"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Danil Popov" },
]
requires-python = ">=3.12,<3.13"
dependencies = [
    # ─── Deep Learning ─────────────────────────────────────────────────
    "torch>=2.12.0",
    "transformers>=5.12.0",
    "accelerate>=1.14.0",
    "bitsandbytes>=0.49.0",
    "safetensors>=0.8.0",

    # ─── Data & Datasets ───────────────────────────────────────────────
    "datasets>=5.0.0",
    "pandas>=2.3.0",
    "numpy>=2.2.0",
    "scipy>=1.15.0",
    "scikit-learn>=1.7.0",

    # ─── NLP Utilities ─────────────────────────────────────────────────
    "tokenizers>=0.22.0",
    "regex>=2026.5.0",
    "pyahocorasick>=2.3.0",
    "networkx>=3.4.0",

    # ─── Configuration ─────────────────────────────────────────────────
    "pydantic>=2.13.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.2.0",

    # ─── Experiment Tracking ───────────────────────────────────────────
    "mlflow>=3.13.0",

    # ─── CLI & Logging ─────────────────────────────────────────────────
    "typer>=0.25.0",
    "rich>=15.0.0",
    "tqdm>=4.68.0",

    # ─── Web / API (optional) ─────────────────────────────────────────
    "fastapi>=0.137.0",
    "uvicorn>=0.49.0",
    "flask>=3.1.0",
    "flask-cors>=6.0.0",
]

# ─── Optional dependencies ──────────────────────────────────────────────
[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9.0",
    "mypy>=1.14",
    "pre-commit>=4.0",
    "jupyter>=1.0",
    "notebook>=7.0",
    "ipython>=9.0",
]
docs = [
    "sphinx>=8.0",
    "sphinx-rtd-theme>=3.0",
    "myst-parser>=4.0",
    "sphinx-autodoc-typehints>=2.0",
]
viz = [
    "matplotlib>=3.10.0",
    "seaborn>=0.13.0",
]

# ─── Tool configurations ────────────────────────────────────────────────
[tool.uv]
# UV-specific: workspace members (future when we add monorepo)
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-v",
]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "extension: extension-specific tests",
    "gpu: require GPU (slow)",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "A", "C90", "UP", "RUF", "TCH"]
ignore = [
    "E501",  # line length handled by formatter
    "E731",  # allow lambda assignment
]

[tool.ruff.lint.isort]
known-first-party = ["experiments", "benchmarks", "config", "inference"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # enable gradually
follow_imports = "silent"

[[tool.mypy.overrides]]
module = ["datasets.*", "transformers.*", "mlflow.*", "accelerate.*", "bitsandbytes.*"]
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
