[project]
name = "adaptive-speculative-decoding"
version = "0.1.0"
description = "Adaptive Speculative Decoding — a research framework for optimizing speculative decoding with adaptive draft length, cross-vocabulary translation, and online distillation"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Danil Popov" },
    { name = "Andrei Polevoi" },
    { name = "Vadim Poponnikov" },
    { name = "Evgenei Piestrovskii" },
    { name = "Aliya Khadeeva" },
    { name = "Mikhail Krylov" },
]
requires-python = ">=3.12,<3.13"
dependencies = [
    # ─── Deep Learning ─────────────────────────────────────────────────
    "torch>=2.5.0,<2.11",
    "transformers>=4.48.0",
    "accelerate>=1.3.0",
    "bitsandbytes>=0.45.0",
    "safetensors>=0.5.0",
    # ─── Data & Datasets ───────────────────────────────────────────────
    "datasets>=3.0.0",
    "pandas>=2.2.0",
    "numpy>=2.2.0",
    "scipy>=1.14.0",
    "scikit-learn>=1.6.0",
    # ─── NLP Utilities ─────────────────────────────────────────────────
    "tokenizers>=0.21.0",
    "regex>=2024.0.0",
    "pyahocorasick>=2.3.0",
    "networkx>=3.4.0",
    # ─── Configuration ─────────────────────────────────────────────────
    "pydantic>=2.10.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.2.0",
    # ─── Experiment Tracking ───────────────────────────────────────────
    "mlflow>=2.20.0",
    # ─── CLI & Logging ─────────────────────────────────────────────────
    "typer>=0.15.0",
    "rich>=13.0.0",
    "tqdm>=4.68.0",
    # ─── Web / API (optional) ─────────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "flask>=3.0.0",
    "flask-cors>=5.0.0",
    "peft>=0.19.1",
    "tiktoken>=0.13.0",
    "sentencepiece>=0.2.1",
]

# ─── Optional dependencies ──────────────────────────────────────────────
[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9.0",
    "mypy>=1.14",
    "pre-commit>=4.0",
    "jupyter>=1.0",
    "notebook>=7.0",
    "ipython>=9.0",
]
docs = [
    "sphinx>=8.0",
    "sphinx-rtd-theme>=3.0",
    "myst-parser>=4.0",
    "sphinx-autodoc-typehints>=2.0",
]
viz = [
    "matplotlib>=3.10.0",
    "seaborn>=0.13.0",
]

# ─── Tool configurations ────────────────────────────────────────────────
[tool.uv]
# UV-specific: workspace members (future when we add monorepo)
default-groups = ["dev"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9.0",
    "mypy>=1.14",
    "pre-commit>=4.0",
    "jupyter>=1.0",
    "notebook>=7.0",
    "ipython>=9.0",
]
# alias optional-deps groups for uv
docs = [
    "sphinx>=8.0",
    "sphinx-rtd-theme>=3.0",
    "myst-parser>=4.0",
    "sphinx-autodoc-typehints>=2.0",
]
viz = [
    "matplotlib>=3.10.0",
    "seaborn>=0.13.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-v",
]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "extension: extension-specific tests",
    "gpu: require GPU (slow)",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "A", "C90", "UP", "RUF", "TCH"]
ignore = [
    "E501",  # line length handled by formatter
    "E731",  # allow lambda assignment
]

[tool.ruff.lint.isort]
known-first-party = ["core", "experiments", "benchmarks", "config", "inference", "utils", "main"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # enable gradually
follow_imports = "silent"

[[tool.mypy.overrides]]
module = ["datasets.*", "transformers.*", "mlflow.*", "accelerate.*", "bitsandbytes.*"]
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
